--- a/src/Radix.Samples.DotNet.Web/Pages/_ViewImports.cshtml
+++ b/src/Radix.Samples.DotNet.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Keda.Samples.DotNet.Web
-@namespace Keda.Samples.DotNet.Web.Pages
+@using Radix.Samples.DotNet.Web
+@namespace Radix.Samples.DotNet.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
